# HoopTesting_DatabaseManager

./: .gitignore  CMakeLists.txt  Doxyfile  assets.qrc  assets_rc.py  dbmanager.cpp  dbmanager.h  example.html  main.cpp  mainwindow.cpp  mainwindow.ui  myreactpage.cpp  myreactpage.h  myresources.rc  mywebengine.cpp  readme.md  server.cpp  server.h  simplecrypt.cpp  static.qrc  ui.qrc  version.h  windowing.cpp  windowing.h
Documentation/html/: 2015-01-30_8md.html  _0dant-design_2cssinjs_2_l_i_c_e_n_s_e_8md.html  _0dbabel_2parser_2_c_h_a_n_g_e_l_o_g_8md.html  _0dcspotcode_2source-map-support_2_l_i_c_e_n_s_e_8md.html  _0demotion_2hash_2_c_h_a_n_g_e_l_o_g_8md.html  _0demotion_2unitless_2_c_h_a_n_g_e_l_o_g_8md.html  _0drc-component_2color-picker_2_l_i_c_e_n_s_e_8md.html  _0drc-component_2context_2_l_i_c_e_n_s_e_8md.html  _0dremix-run_2router_2_c_h_a_n_g_e_l_o_g_8md.html  _0dremix-run_2router_2_l_i_c_e_n_s_e_8md.html  _a_p_i_8md.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_c_make_files_23_829_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_c_make_files_23_829_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_c_make_files_23_829_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_c_make_files_2_show_includes_2foo_8h.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_c_make_files_2_show_includes_2foo_8h_source.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_c_make_files_2_show_includes_2main_8c.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_c_make_files_2_show_includes_2main_8c.js  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_c_make_files_2_show_includes_2main_8c_source.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_database_manager__autogen_2_e_w_i_e_g_a46_w_w_2moc__myreactpage_8cpp.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_database_manager__autogen_2_e_w_i_e_g_a46_w_w_2moc__myreactpage_8cpp.js  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_database_manager__autogen_2_e_w_i_e_g_a46_w_w_2moc__myreactpage_8cpp_8d.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_database_manager__autogen_2_e_w_i_e_g_a46_w_w_2moc__myreactpage_8cpp_8d_source.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_database_manager__autogen_2_e_w_i_e_g_a46_w_w_2moc__myreactpage_8cpp_source.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_database_manager__autogen_2_e_w_i_e_g_a46_w_w_2qrc__assets_8cpp.html  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_database_manager__autogen_2_e_w_i_e_g_a46_w_w_2qrc__assets_8cpp.js  _desktop___qt__6__7__2___m_s_v_c2019__64bit-_debug_2_database_manager__autogen_2_e_w_i_e_g_a46_w_w_2qrc__assets_8cpp_source.html  (+2742 more)
Mockoon/: HoopTesting_DataManagerAPI.json
Request/: database.cpp  database.h  material.cpp  material.h  operator.cpp  operator.h  standard.cpp  standard.h
assets/: package-lock.json  package.json  webpack.config.ts
(+188 files in other folders)
